--- a/Terramon.csproj
+++ b/Terramon.csproj
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\tModLoader.targets" />
-  <PropertyGroup>
-    <AssemblyName>Terramon</AssemblyName>
-    <TargetFramework>net6.0</TargetFramework>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Rejuvena.TeaFramework" Version="1.0.0" />
-    <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
-  </ItemGroup>
+    <Import Project="..\tModLoader.targets" />
+    <PropertyGroup>
+        <AssemblyName>Terramon</AssemblyName>
+        <TargetFramework>net6.0</TargetFramework>
+        <PlatformTarget>AnyCPU</PlatformTarget>
+        <LangVersion>latest</LangVersion>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Rejuvena.TeaFramework" Version="1.0.0" />
+        <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
+    </ItemGroup>
 </Project>
